--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Internship Project</title>
+    <title>Summer Internship Project</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
@@ -171,7 +171,7 @@
     
     <div class="tail">
         <h4>
-            This model is developed by Ishu kumar
+            This model is developed by kumari Khushboo 
         </h4>
         <p>
             Under guidance of Deepak Moud Sir
